--- a/app/views/tones/tones/_form.html.erb
+++ b/app/views/tones/tones/_form.html.erb
@@ -11,33 +11,33 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :short %><br>
-    <%= f.text_area :short %>
+    <%= f.text_area :short, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :body %><br>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :lang %><br>
-    <%= f.text_field :lang %>
+    <%= f.text_field :lang, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :de_short %><br>
-    <%= f.text_area :de_short %>
+    <%= f.text_area :de_short, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :de_body %><br>
-    <%= f.text_area :de_body %>
+    <%= f.text_area :de_body, class: 'form-control' %>
   </div>
   <div class="actions">
     <%= f.submit %>
