--- a/app/views/layouts/tones/application.html.erb
+++ b/app/views/layouts/tones/application.html.erb
@@ -7,8 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
