--- a/app/views/tones/tones/index.html.erb
+++ b/app/views/tones/tones/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Listing Tones</h1>
 
+<%= link_to 'New Tone', new_tone_path %>
+
 <table>
   <thead>
     <tr>
@@ -12,7 +14,7 @@
       <th>Description</th>
       <th>De short</th>
       <th>De body</th>
-      <th colspan="3"></th>
+      <th colspan="3">Manage</th>
     </tr>
   </thead>
 
