--- a/app/views/tones/tones/sign_in.html.erb
+++ b/app/views/tones/tones/sign_in.html.erb
@@ -1,14 +1,18 @@
-<h2>Login to tones</h2>
-<div class='tones_sign_in col-md-6'>
-  <%= form_tag(sign_in_tones_path) do %>
-    <div>
-      <%= label_tag 'password', 'Enter the password' %>
-      </br>
-      <%= password_field_tag 'password', '', class: 'form-control' %>
+<div class="login-block">
+  <h2>Login to tones</h2>
+  <div class='row'>
+    <div class='tones_sign_in'>
+      <%= form_tag(sign_in_tones_path) do %>
+        <div class="form-group">
+          <%= label_tag 'password', 'Enter the password' %>
+          </br>
+          <%= password_field_tag 'password', '', class: 'form-control' %>
+        </div>
+        </br>
+        <div class="form-group">
+          <%= submit_tag 'Sign in', class: 'btn btn-primary' %>
+        </div>
+      <% end %>
     </div>
-    </br>
-    <div>
-      <%= submit_tag 'Sign in', class: 'btn btn-primary' %>
-    </div>
-  <% end %>
+  </div>
 </div>
