--- a/app/assets/stylesheets/tones/tones.css
+++ b/app/assets/stylesheets/tones/tones.css
@@ -34,6 +34,26 @@
   color:#337ab7;
   font-weight:700;
 }
+#sign_out_tone {
+  display: inline-block;
+  float: right;
+  margin-bottom: 11px !important;
+  margin-top: 10px;
+}
+.table-heading h2{
+  background: #000 none repeat scroll 0 0;
+  color: #fff;
+  display: inline-block;
+  margin: 0;
+  padding: 10px;
+  width: 100%;
+}
+.table-responsive table thead tr th,.table-responsive table tbody tr td{
+  border-color:#000;
+}
+.new-btn{
+  margin: 15px 0px !important;  
+}
 @media screen and (max-width: 767px){
   .login-block{
     width:100%;
