--- a/app/views/tones/tones/index.html.erb
+++ b/app/views/tones/tones/index.html.erb
@@ -1,35 +1,39 @@
-<div class='table-heading'>
-  <h2>Listing Tones</h2>
-</div>
-<div class = "table-responsive">
-  <table class = "table table-striped table-bordered table-condensed">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Short</th>
-        <th>Body</th>
-        <th>De short</th>
-        <th>De body</th>
-        <th>Manage</th>
-      </tr>
-    </thead>
+<div class='row'>
+  <div class='col-md-12'>
+    <%= link_to 'New Tone', new_tone_path, class: "btn btn-primary new-btn" %>
+    <div class='table-heading'>
+      <h2>Listing Tones</h2>
+    </div>
+    <div class = "table-responsive">
+      <table class = "table table-striped table-bordered table-condensed" id = "datatable">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Short</th>
+            <th>Body</th>
+            <th>De short</th>
+            <th>De body</th>
+            <th>Manage</th>
+          </tr>
+        </thead>
 
-    <tbody>
-      <% @tones.each do |tone| %>
-        <tr>
-          <td><%= tone.name %></td>
-          <td><%= tone.description %></td>
-          <td><%= tone.short %></td>
-          <td><%= tone.body %></td>
-          <td><%= tone.de_short %></td>
-          <td><%= tone.de_body %></td>
-          <td><%= link_to 'Show', tone %>
-              <%= link_to 'Edit', edit_tone_path(tone) %>
-              <%= link_to 'Destroy', tone, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+        <tbody>
+          <% @tones.each do |tone| %>
+            <tr>
+              <td><%= tone.name %></td>
+              <td><%= tone.description %></td>
+              <td><%= tone.short %></td>
+              <td><%= tone.body %></td>
+              <td><%= tone.de_short %></td>
+              <td><%= tone.de_body %></td>
+              <td><%= link_to 'Show', tone %>
+                  <%= link_to 'Edit', edit_tone_path(tone) %>
+                  <%= link_to 'Destroy', tone, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
-<%= link_to 'New Tone', new_tone_path, class: "btn btn-primary new-btn" %>
